# OMNIORD

./: .gitignore  CLAUDE.md  PERFORMANCE.md  PERF_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
omniord/: __init__.py  cache.py  config.py  http_pool.py  lazy.py  main.py  metrics.py  progress.py
omniord/agents/: __init__.py  base.py  swarm.py
omniord/core/: __init__.py  dag.py  engine.py  events.py  orchestrator.py  planner.py
omniord/memory/: __init__.py  store.py  working.py
omniord/router/: __init__.py  base.py  router.py
omniord/router/providers/: __init__.py  anthropic.py  ollama.py  openai.py
omniord/safety/: __init__.py  guard.py
omniord/tools/: __init__.py  ast_checker.py  factory.py  registry.py  sandbox.py
tests/: test_cli.py  test_config.py  test_dag.py  test_integration.py  test_optimizations.py  test_planner.py  test_progress.py  test_router.py  test_safety.py  test_tool_factory.py
