[project]
name = "omniord"
version = "0.1.0"
description = "An enterprise-grade, autonomous, local-first AI orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
omniord = "omniord.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["omniord*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
