[project]
name = "omniord"
version = "0.1.0"
description = "An enterprise-grade, autonomous, local-first AI orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
omniord = "omniord.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["omniord*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer uses Argument()/Option() calls as defaults.
# UP042: the (str, Enum) pattern is intentional for JSON-friendly enums.
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # long provider-signature lines in test doubles are fine

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
files = ["omniord"]
